--- a/views/Formulari.pug
+++ b/views/Formulari.pug
@@ -12,8 +12,8 @@ ul.menu
   li.menu__item: a.menu__link(href="/Inici") Inicio
   li.menu__item: a.menu__link(href="/Informacio") Informacio
   li.menu__item: a.menu__link(href="/MisEventos") Mis Eventos
-  li.menu__item: a.menu__link(href="/Formulari") Formulari
-  li.menu__item: a.menu__link(href="/Calendar") Calendari 
+  li.menu__item: a.menu__link(href="/formulari") Formulari
+  li.menu__item: a.menu__link(href="/calendari") Calendari 
   li.menu__item: a.menu__link(href="/Ubicacions") Ubicacions
   li.menu__item: a.menu__link(href="/Contact") Contacte
 
