--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+*{
+  background-color:aquamarine;
+}
+
 ul.menu {
   list-style: none;
   margin: 0;
@@ -32,3 +36,38 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+#tareas {
+  margin-bottom: 20px;
+  width: 40%;
+  max-height: 300px;
+  overflow: auto;
+}
+
+#tareas ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#tareas ul li {
+  background-color: #eee;
+  padding: 10px;
+  width: 50px;
+  margin: 5px;
+  cursor: move;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
