--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,32 @@
-*{
-  background-color:aquamarine;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #00B7FF;
+  text-decoration: none;
 }
 
 ul.menu {
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
   list-style: none;
   margin: 0;
   padding: 0;
+  background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  width: 100%;
 }
 
 ul.menu li {
@@ -15,34 +36,37 @@ ul.menu li {
 ul.menu li a {
   display: block;
   padding: 10px;
-  text-decoration: none;
-  color: #333;
-}
-
-ul.menu li a:hover {
-  background-color: #333;
   color: #fff;
 }
 
-button{
+ul.menu li a:hover {
+  background-color: #555;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
   align-items: center;
-} 
-
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: calc(100vh - 50px);
 }
 
-a {
-  color: #00B7FF;
+#map-container {
+  width: 400px;
+  height: 400px;
+  margin-right: 50px;
 }
 
+#mapa {
+  width: 100%;
+  height: 100%;
+}
 
 #tareas {
-  margin-bottom: 20px;
-  width: 40%;
+  width: 150px;
   max-height: 300px;
   overflow: auto;
+  padding: 10px;
+  background-color: #eee;
 }
 
 #tareas ul {
@@ -52,22 +76,23 @@ a {
 }
 
 #tareas ul li {
-  background-color: #eee;
-  padding: 10px;
-  width: 50px;
+  text-align: center;
   margin: 5px;
+  width: 100px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
   cursor: move;
 }
 
-canvas {
-  width: 100%;
-  height: 100%;
-  border: 2px solid black;
+#tareas ul li[data-task="1"] {
+  background-color: #ffc;
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+#tareas ul li[data-task="2"] {
+  background-color: #cfc;
 }
 
+#tareas ul li[data-task="3"] {
+  background-color: #ccf;
+}
