--- a/views/Formulari.pug
+++ b/views/Formulari.pug
@@ -5,17 +5,7 @@ html
     link(rel='stylesheet', href='../stylesheets/style.css')
   body
 
-nav#main-nav.main-nav
-ul.menu
-  li.menu__item: a.menu__link(href="/Register") Registrar-se
-  li.menu__item: a.menu__link(href="/Login") Login
-  li.menu__item: a.menu__link(href="/Inici") Inicio
-  li.menu__item: a.menu__link(href="/Informacio") Informacio
-  li.menu__item: a.menu__link(href="/MisEventos") Mis Eventos
-  li.menu__item: a.menu__link(href="/formulari") Formulari
-  li.menu__item: a.menu__link(href="/calendari") Calendari 
-  li.menu__item: a.menu__link(href="/Ubicacions") Ubicacions
-  li.menu__item: a.menu__link(href="/Contact") Contacte
+include menu
 
 
 ul#actividades
