--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,18 +47,23 @@ ul.menu li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
 }
 
 #map-container {
-  width: 400px;
-  height: 400px;
-  margin-right: 50px;
+  margin: 20px auto;
+  width: 900px;
+  height: 700px;
+  margin: 0 auto;
+  object-fit: cover;
+  border: 1px solid #ccc;
 }
 
 #mapa {
+  border: 1px solid black;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 #tareas {
@@ -95,4 +100,8 @@ ul.menu li a:hover {
 
 #tareas ul li[data-task="3"] {
   background-color: #ccf;
+}
+
+html, body {
+  height: 100%;
 }
