--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,9 +1,7 @@
 nav#main-nav.main-nav
   ul.menu
-    li.menu__item: a.menu__link(href="/Register") Registrar-se
-    li.menu__item: a.menu__link(href="/Login") Login
     li.menu__item: a.menu__link(href="/Inici") Inicio
-    li.menu__item: a.menu__link(href="/Informacio") Informacio
+    li.menu__item: a.menu__link(href="/Informacio") Informació
     li.menu__item: a.menu__link(href="/MisEventos") Mis Eventos
     li.menu__item: a.menu__link(href="/formulari") Formulari
     li.menu__item: a.menu__link(href="/calendari") Calendari 
