--- a/views/index.pug
+++ b/views/index.pug
@@ -4,10 +4,13 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Iniciar Sesión
+        title= titol
         link(rel='stylesheet', href='../stylesheets/style.css')
     body
-    <br><br><br><br><br><br>
+    <br><br><br>
+    if missatge
+    p= missatge
+    <br><br><br>
         form(action="/comproba", method="POST")
             h2 Iniciar Sesión
             .section
