--- a/views/crea.pug
+++ b/views/crea.pug
@@ -18,14 +18,8 @@ html(lang="en")
                 .field
                     input(type="password", id="ContrasenyaLogin", name="ContrasenyaLogin")
             .section
-                .title Rol
-                .field
-                      select(id="role" name="role")
-                        option(value="admin") Administrador
-                        option(value="user") Usuari normal
-            .section
                 .button
                     input(type="submit", value="Registrarse")
                 .button
-                    a(href="/") Torna
+                    a(href="/") Iniciar Sesión
 
