--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,7 +1,11 @@
 nav#main-nav.main-nav
   ul.menu
+    li.menu__item: a.menu__link(href="/Register") Registrar-se
+    li.menu__item: a.menu__link(href="/Login") Login
+    li.menu__item: a.menu__link(href="/Inici") Inicio
+    li.menu__item: a.menu__link(href="/Informacio") Informacio
     li.menu__item: a.menu__link(href="/MisEventos") Mis Eventos
     li.menu__item: a.menu__link(href="/formulari") Formulari
     li.menu__item: a.menu__link(href="/calendari") Calendari 
-    li.menu__item: a.menu__link(href="/mapa") Contacte
-    li.menu__item: a.menu__link(href="/") Logout
+    li.menu__item: a.menu__link(href="/mapa") Mapa
+    li.menu__item: a.menu__link(href="/Contact") Contacte
